# src/routes/user.route.js
@@ -4,5 +4,6 @@ const userController = require("../controllers/user.controller");
 
 // Generating JWT
 router.post("/login", userController.login);
+router.post("/register", userController.register);
 
 module.exports = router;
